// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreBar has custom palette 1`] = `
<div
  className="score-bar vertical"
>
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar med"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar med"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar med"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders vertically 1`] = `
<div
  className="score-bar vertical"
>
  <div
    className="score-bar-bar low-med"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar low-med"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with < 0 score 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with score = 0 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with score > max score 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar high"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;
